tests/baselines/reference/libMembers.errors.txt
libMembers.ts(4,3): error TS2339: Property 'subby' does not exist on type 'string'.
libMembers.ts(6,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
libMembers.ts(9,17): error TS1011: An element access expression should take an argument.
libMembers.ts(12,15): error TS2339: Property 'prototype' does not exist on type 'C'.


==== libMembers.ts (4 errors) ====
    var s="hello";
    s.substring(0);
    s.substring(3,4);
    s.subby(12);   // error unresolved
      ~~~~~
!!! error TS2339: Property 'subby' does not exist on type 'string'.
    String.fromCharCode(12);
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class C {
        }
        var a=new C[];
                    
!!! error TS1011: An element access expression should take an argument.
        a.length;
        a.push(new C());
        (new C()).prototype;
                  ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type 'C'.
    }
    
    